--- a/package.json
+++ b/package.json
@@ -8,22 +8,32 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
-    "framer-motion": "^1.11.1",
+    "framer-motion": "^2.7.6",
     "groq": "^0.147.8",
+    "i18n-webpack-plugin": "^1.0.0",
     "include-media": "^1.4.9",
+    "mini-css-extract-plugin": "^0.10.0",
+    "minireset.css": "0.0.6",
     "next": "^9.2.0",
+    "next-images": "^1.6.0",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.1",
+    "path": "^0.12.7",
     "postcss-flexbugs-fixes": "^4.1.0",
     "react": "^16.12.0",
+    "react-div-100vh": "^0.5.2",
     "react-dom": "^16.12.0",
     "react-player": "^1.14.2",
     "react-redux": "^7.1.3",
     "react-svg-loader": "^3.0.3",
+    "react-waypoint": "^9.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack-merge": "^4.2.2"
   },
@@ -42,11 +52,7 @@
     "@storybook/addon-links": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
     "@storybook/addons": "^5.3.13",
-    "@storybook/react": "^5.3.13",
-    "babel-loader": "^8.0.6",
-    "i18n-webpack-plugin": "^1.0.0",
-    "path": "^0.12.7",
-    "webpack-merge": "^4.2.2"
+    "@storybook/react": "^5.3.13"
   },
   "repository": {
     "type": "git",
