--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "dev": "next -p 3300",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start -p $PORT",
     "storybook:react": "start-storybook -s ./public/ -c .storybook/react -p 6006",
     "build-storybook": "build-storybook"
