--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
+    "use-clipboard-copy": "^0.1.2",
     "webpack-merge": "^4.2.2"
   },
   "scripts": {
