--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
+    "easy-scroll": "^0.7.0",
     "framer-motion": "^2.7.6",
     "groq": "^0.147.8",
     "i18n-webpack-plugin": "^1.0.0",
